# opengl-with-qt

./: CMakeLists.txt
include/: gl_widget.h
src/: gl_widget.cc  main.cc
